# ESurfingClient-CVersion

./: .gitignore  Compile.md  Desktop.md  OpenWRT.md  OpenWRT_mwan3.md  README.md  UpdateLogs.md  build_ipk.sh
.claude/: settings.json
.configs/: mediatek_filogic-apk.config  mediatek_filogic-ipk.config  qualcommax_ipq60xx-apk.config  qualcommax_ipq60xx-ipk.config  ramips_mt7621-apk.config  ramips_mt7621-ipk.config  x86_64-apk.config  x86_64-ipk.config
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 报告-bug.md  提问问题.md  文档补充.md  新架构适配.md
.github/workflows/: build-all-platforms.yml  build-desktop-arm64-macos.yml  build-desktop-x86_64-linux.yml  build-desktop-x86_64-macos.yml  build-desktop-x86_64-windows.yml  build-openwrt-apk-mediatek_filogic.yml  build-openwrt-apk-qualcommax_ipq60xx.yml  build-openwrt-apk-ramips_mt7621.yml  build-openwrt-apk-x86_64.yml  build-openwrt-ipk-mediatek_filogic.yml  build-openwrt-ipk-qualcommax_ipq60xx.yml  build-openwrt-ipk-ramips_mt7621.yml  build-openwrt-ipk-x86_64.yml  build-openwrt-luci-apk-all.yml  build-openwrt-luci-ipk-all.yml
.playwright-mcp/: page-2026-06-15T12-36-54-151Z.yml  page-2026-06-15T12-37-16-579Z.yml  page-2026-06-15T14-28-43-384Z.yml
data/: mimo.db
esurfingclient/: Makefile
esurfingclient/config/: ESurfingClient.json
esurfingclient/esurfing/: CMakeLists.txt  Main.c
esurfingclient/esurfing/inc/: DialerClient.h  NetClient.h  States.h
esurfingclient/esurfing/inc/cipher/: CipherInterface.h  CipherUtils.h  KeyData.h
esurfingclient/esurfing/inc/utils/: Logger.h  PlatformUtils.h  Service.h  Shutdown.h  SimThread.h
esurfingclient/esurfing/inc/webserver/: WebServer.h  mongoose.h
esurfingclient/esurfing/portal/: index.html  input.css
esurfingclient/esurfing/portal/assets/js/: main.js  toggleTheme.js
esurfingclient/esurfing/src/: DialerClient.c  NetClient.c  States.c
esurfingclient/esurfing/src/cipher/: CipherFactory.c  CipherUtils.c  KeyData.c
esurfingclient/esurfing/src/cipher/impl/: aes_cbc.c  aes_cbc_pc.c  aes_ecb.c  aes_ecb_pc.c  des_ecb_six_pc.c  desede_cbc.c  desede_cbc_pc.c  desede_ecb.c  mod_xtea.c  mod_xtea_cbc_triple_pc.c  mod_xtea_iv.c  mod_xtea_pc.c  sm4_cbc.c  sm4_ecb.c  zuc.c
esurfingclient/esurfing/src/utils/: Logger.c  PlatformUtils.c  Service.c  Shutdown.c  SimProcess.c  SimThread.c  cJSON.c
esurfingclient/esurfing/src/webserver/: WebServer.c  mongoose.c
esurfingclient/init.d/: esurfingclient.init
luci-app-esurfingclient/: Makefile
luci-app-esurfingclient/legacy-luci/usr/lib/lua/luci/controller/: esurfingclient.lua
luci-app-esurfingclient/legacy-luci/usr/lib/lua/luci/view/: esurfingclient.htm
luci-app-esurfingclient/luci/usr/share/luci/menu.d/: luci-app-esurfingclient.json
luci-app-esurfingclient/luci/usr/share/rpcd/acl.d/: luci-app-esurfingclient.json
luci-app-esurfingclient/luci/www/luci-static/resources/view/: esurfingclient.js
